--- a/app/src/main/res/layout/row_song_item_first.xml
+++ b/app/src/main/res/layout/row_song_item_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".musicservice.ui.songs.SongFragment"
+    tools:context=".ui.main.songs.SongFragment"
     android:paddingTop="@dimen/padding_container">
 
     <TextView
