--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,6 +118,7 @@
                     android:fadingEdge="horizontal" />
 
                 <ImageButton
+                    android:id="@+id/main_bottom_appbar_btn_previous"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_skip_previous_black_24dp"
@@ -131,6 +132,7 @@
                     android:tint="?attr/iconTint" />
 
                 <ImageButton
+                    android:id="@+id/main_bottom_appbar_btn_next"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_skip_next_black_24dp"
